package com.calerts.computer_alertsbe.articlesubdomain.dataaccesslayer;

public enum Tags {
    NFL,
    NBA,
    NHL,
    UFC,
    MLB
}
